# douyin-stream

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REFACTOR_2026-05.md  RELEASE_CHECKLIST.md  ROADMAP.md  goal.md  pyproject.toml  requirements.txt  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
config/: auth_rules.yaml  config.yaml.example
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: STATUS.md
docs/refactor/: frontend-redesign-spec.md
docs/references/: API.md  FAQ.md  INSTALLATION.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/public/: prototype.html
frontend/src/: App.tsx  index.css
logs/: media_tools_20260507.jsonl  media_tools_20260510.jsonl
scripts/: cleanup_orphan_qwen_records.py  health_check.py  start.sh
src/media_tools/: __init__.py  logger.py
tests/: test_aggregate_failures.py  test_app_config.py  test_auto_retry_triggers_on_failed_status.py  test_config_layers.py  test_creator_download_missing_items_payload.py  test_creator_transcribe_submit_returns.py  test_error_module_consolidation.py  test_error_types.py  test_exceptions.py  test_flow_resume.py  test_flow_run_id_checkpoints.py  test_local_assets_visibility.py  test_local_folder_grouping.py  test_local_transcribe_concurrency.py  test_no_print_in_src.py  test_orchestrator_transcribe_runs.py  test_oss_upload_resumable.py  test_partial_failed.py  test_pipeline_worker.py  test_qwen_account_pool_db.py  test_qwen_rehydrate_accounts_endpoint.py  test_qwen_status.py  test_task_ops_progress_does_not_revive_terminal_tasks.py  test_task_payload_retry.py  test_tasks_history_does_not_gc_assets.py  test_title_fix.py
tests/accounts/: test_account_pool_lru.py  test_account_pool_service_singleton.py  test_accounts.py  test_auth_state.py  test_quota.py  test_qwen_account_pool_db.py  test_qwen_auth_state_normalization.py  test_qwen_rehydrate_accounts_endpoint.py  test_qwen_status.py
tests/api/: test_app.py  test_assets.py  test_assets_search_does_not_call_ensure_fts_populated.py  test_creator_transcribe_cleanup_payload.py  test_creators.py  test_creators_disk_counts.py  test_douyin.py  test_fts_populated_on_startup.py  test_health_check.py  test_metrics.py  test_no_camelcase_in_responses.py  test_no_playwright_dependency.py  test_no_print_in_src.py  test_scheduler.py  test_settings.py  test_settings_global_merge.py  test_task_ops_update_task_progress_persists_stage.py  test_task_payload_pipeline_progress.py  test_task_stale_gc_upload_stage_30m.py  test_tasks.py  test_tasks_clear_history.py  test_tasks_creator_transcribe_cleanup_retry.py  test_tasks_pause_resume.py  test_tasks_recover_aweme_transcribe.py  test_tasks_retry_failed_assets.py  test_tasks_retry_failed_subtasks.py  test_tasks_stale_gc.py  test_tasks_ws_disconnect_cleanup.py  test_websocket.py
tests/assets/: test_db_media_assets_migration.py  test_local_assets_visibility.py  test_local_folder_grouping.py  test_local_media_extensions.py  test_tasks_history_does_not_gc_assets.py  test_title_fix.py
tests/bilibili/: test_creator_download_task.py  test_creators_api.py  test_download_router.py  test_downloader.py  test_naming.py  test_pipeline_worker_routing.py  test_settings_bilibili_accounts.py  test_url_parser.py
tests/core/: conftest.py  test_app_config.py  test_default_pipeline_concurrency.py  test_exception_handling.py  test_exceptions.py  test_export_format_changes_take_effect.py
tests/creators/: test_creator_download_missing_items_payload.py  test_creator_sync_avatar_refresh.py  test_creator_transcribe_submit_returns.py
tests/platform/: test_douyin_f2_helpers.py  test_douyin_full_download_redownloads_corrupt.py  test_youtube.py
tests/regression/: test_bugfix_regression.py  test_recurring_backend.py  test_recurring_frontend.py
tests/scheduler/: test_dispatcher.py  test_ops.py  test_repository.py
tests/services/: test_cleanup.py  test_media_asset_service.py  test_transcribe_run_repository.py
tests/store/: test_task_ops_complete_task_sets_progress_by_status.py  test_task_ops_progress_does_not_revive_terminal_tasks.py  test_task_payload_retry.py  test_task_repository_patch_payload.py
tests/transcribe/: test_aggregate_failures.py  test_config.py  test_error_module_consolidation.py  test_error_types.py  test_extract_transcript_text_paragraphs.py  test_flow.py  test_flow_cleanup_orphan_record.py  test_flow_poll_heartbeat.py  test_flow_resume.py  test_flow_run_id_checkpoints.py  test_local_transcribe_concurrency.py  (+7 more)
(+241 files in other folders)
