[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-tools"
version = "0.1.0"
description = "抖音下载 + Qwen 转写一体化媒体工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "f2>=0.0.1.0",
  "fastapi>=0.110.0",
  "pyyaml>=6.0.0",
  "questionary>=2.0.0,<3",
  "rich>=13.0.0,<14",
  "apscheduler>=3.10.0",
  "uvicorn>=0.27.0",
  "yt-dlp>=2025.1.1",
  "pypdf>=4.0",
  "oss2>=2.18",
]

[project.scripts]
media-tools-api = "media_tools.api.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
