[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-tools"
version = "0.1.0"
description = "抖音下载 + Qwen 转写一体化媒体工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "f2>=0.0.1.0",
  "fastapi>=0.116.0",
  "starlette>=0.41.0,<1.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0,<14",
  "apscheduler>=3.10.0",
  "uvicorn>=0.27.0",
  "yt-dlp>=2025.1.1",
  "pypdf>=4.0",
  "oss2>=2.18",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
media-tools-api = "media_tools.api.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "E402",   # module level import not at top (lazy imports in __init__.py, routers)
  "F401",   # unused imports (re-exports in __init__.py)
  "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
  "B904",   # raise ... from err (many pre-existing raise HTTPException patterns)
  "SIM105", # contextlib.suppress (try/except/pass is more readable in some cases)
  "SIM115", # context manager for open() (not always appropriate in generator/yield)
  "SIM117", # nested with (sometimes readability is better with nesting)
  "B005",   # .strip() with multi-char strings (valid for separator-like chars)
  "B026",   # star-arg unpacking after keyword arg (legacy call patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["media_tools"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
